controller/ 모달 수정중

--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -30,7 +30,8 @@
 .resultList #courseName {position: absolute; font-weight:bold; font-size:16px; line-height: 20px;}
 .resultList .besticon {vertical-align:bottom; width:20px; height:20px;}
 .resultList .img-icons {float:right; width: 65px; height:24px; margin-right:3px; padding:0px; text-align:right;}
-.resultList .img-icons .like-bookmark {vertical-align:top; margin-left:3px; padding:0px; width:(100%-margin); height:24px;}
+.resultList .img-icons .like-btn {vertical-align:top; margin-left:3px; padding:0px; width:(100%-margin); height:24px;}
+.resultList .img-icons .bookmark-btn {vertical-align:top; margin-left:3px; padding:0px; width:(100%-margin); height:24px;}
 
 .resultList li #textBox #courseInfo {font-size:13px; color: gray; line-height: 20px;}
 .resultList li #textBox .newpost {width:20px; height:20px; vertical-align:bottom;}
@@ -48,16 +49,16 @@
 
 
 .menuBar .menu1 {width:(100%-padding); height:(20%-padding); border-bottom:solid 1px #000000; text-align:left;  padding:20px 30px; }
-.menuBar .menu1 #mypage {font-size: 18px; font-weight:bold;}
-.menuBar .menu1 .myHome {width: 20px; height: 20px;}
-.menuBar .menu1 .bookmark-btn {text-align:right;}
-.menuBar .menu1 .menuBar-close {width: 20px; height: 20px;}
+.menuBar .menu1 #mypage {font-size: 18px; font-weight:bold;float:left; }
+.menuBar .menu1 .myHome {width: 20px; height: 20px; }
+.menuBar .menu1 .menuBar-close {text-align:right; }
+.menuBar .menu1 .menuBar-close-btn {width: 20px; height: 20px; }
 
 
 .menuBar .menu2 {width:(100%-padding); height:(60%-padding); border-bottom:solid 1px #000000; text-align:left;  padding:20px 30px; overflow:scroll;}
 .menuBar .menu2 #bookmark {font-size: 18px; float:left; font-weight:bold;}
 .menuBar .bmStar {width: 20px; height: 20px;}
-.menuBar .menu2 .bookmark-btn {text-align:right;  float:right;}
+.menuBar .menu2 .bookmark-btn {text-align:right;}
 .menuBar .plus-btn {width: 20px; height: 20px;}
 .menuBar .minus-btn {width: 20px; height: 20px;}
 .menuBar #menuList .editName {width: 16px; height: 16px; float:right; color: gray; margin-top:17px;}
