--- a/webapp/WEB-INF/views/main/index.html
+++ b/webapp/WEB-INF/views/main/index.html
@@ -34,24 +34,20 @@
 	<!-- header -->
 
 <!------------------------- photo slider ------------------------>
-	
-		<div class="slider">
-			<input type="radio" name="slide" id="slide1" checked> 
-			<input type="radio" name="slide" id="slide2"> 
-			<input type="radio" name="slide" id="slide3"> <input type="radio" name="slide" id="slide4">
-
-			<ul class="imgs" id="imgholder">
-				<li><img src="../../../assets/image/main/swiss.jpg"></li>
-				<li><img src="../../../assets/image/main/paris.jpg"></li>
-				<li><img src="../../../assets/image/main/parispark.jpg"></li>
-				<li><img src="../../../assets/image/main/busan.jpg"></li>
-			</ul>
-
-			<div class="bullets">
-				<label for="slide1">&nbsp;</label> <label for="slide2">&nbsp;</label>
-				<label for="slide3">&nbsp;</label> <label for="slide4">&nbsp;</label>
+	<div class="slide slide_wrap">
+			<div class="slide_item item1"><img src="../../../assets/image/main/swiss.jpg">
 			</div>
-		</div>
+			<div class="slide_item item2"><img src="../../../assets/image/main/paris.jpg">
+			</div>
+			<div class="slide_item item3"><img src="../../../assets/image/main/parispark.jpg">
+			</div>
+			<div class="slide_item item4"><img src="../../../assets/image/main/busan.jpg">
+			</div>
+
+		<div class="slide_prev_button slide_button">◀</div>
+		<div class="slide_next_button slide_button">▶</div>
+		<ul class="slide_pagination"></ul>
+	</div>
 
 		<!------------------------- 글귀 ------------------------>
 <div id="wrap">
@@ -89,6 +85,7 @@
 		<p id="footer-Copyright">JOA, Inc. All rights reserved.</p>
 
 	</div>
-	<script src="../../../assets/js/main/main.js"></script>
+
+<script src="../../../assets/js/main/main.js"></script>
 </body>
 </html>
