--- a/webapp/assets/css/course-map.css
+++ b/webapp/assets/css/course-map.css
@@ -4,7 +4,13 @@
 	position: relative;
 	overflow: hidden;
 	width: 100%;
-	height: 350px;
+	height: 500px;
+}
+.map_wrap #map {
+	width: 100%;
+	height: 100%;
+	position:relative;
+	overflow:hidden;
 }
 
 .radius_border {
