--- a/webapp/WEB-INF/views/includes/header.html
+++ b/webapp/WEB-INF/views/includes/header.html
@@ -10,13 +10,17 @@
 	<div id="header">
 		<a href="../main/index.html"><img id="logo" src="../../../assets/image/main/logo.jpg"></a>
 		
-		<div id="login">
-			<ul>
-				<li><a href="">회원가입</a></li>
-				<li><a href="">로그인</a></li>
-			</ul>
-		</div> <!-- login -->
-		
+	<div id="login" class="login">
+	<input id="check-btn" type="checkbox">
+	<label for="check-btn">김수빈님</label>
+	
+		<ul id="menuitems" class="menubars">
+			<li><a href="">코스 등록하기</a></li>
+			<li><a href="">마이사이트</a></li>
+			<li><a href="">로그아웃</a></li>
+		</ul>
+	</div>
+	
 		<div id="nav">
 			<ul>
 				<li><a href="../together/together.html">함께하기</a></li>
@@ -24,8 +28,33 @@
 				<li><a href="../best/bestPlus.html">베스트</a></li>
 				<li><a href="../map/map.html">지도</a></li>
 			</ul>
-		</div> <!-- nav -->
-	</div> <!-- header -->
+		</div> 
+		<!-- nav -->
+	</div> 
+	<!-- header -->
+	
+	
+	
+		<div id="header">
+		<a href="../main/index.html"><img id="logo" src="../../../assets/image/main/logo.jpg"></a>
+		
+	<div id="login">
+		<ul>
+			<li><a href="">회원가입</a></li>
+			<li><a href="">로그인</a></li>
+		</ul>
+	</div>
+		<div id="nav">
+			<ul>
+				<li><a href="../together/together.html">함께하기</a></li>
+				<li><a href="../board/board.html">게시판</a></li>
+				<li><a href="../best/bestPlus.html">베스트</a></li>
+				<li><a href="../map/map.html">지도</a></li>
+			</ul>
+		</div> 
+		<!-- nav -->
+	</div> 
+	<!-- header -->
 	
 </body>
 </html>
