--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -114,6 +114,72 @@
 
 
 
+/* ---------------------모달창 공통(코스제목, 즐겨찾기)----------------------- */
+.modal-header {text-align: center;}
+.modal-header .modal-title {
+	font-size: 18px;
+	font-weight: 700;
+	text-align: center;
+}
+.modal-dialog {
+	width: 300px;
+	height: auto;
+	position: fixed;
+	top: 20%;
+	left: 40%;
+	transform: translate(-50%, -50%);
+}
+.modal-body {
+	padding: 16px 24px;
+	text-align: left;
+}
+
+.modal-body .modal-body-detail {
+	font-size: 10px;
+	color: rgb(255, 255, 255);
+	padding: 16px 24px;
+	text-align: left;
+}
+
+/* ---------------------코스제목 수정(모달창)----------------------- */
+.modal-body #title-update {
+	width: 100%;
+	height: 40px; 
+	font-size: 14px;
+}
+.modal-footer .btn-primary {
+	background-color: rgb(50, 108, 249);
+	color: rgb(255, 255, 255);
+}
+
+/* ---------------------즐겨찾기 추가(모달창)----------------------- */
+#bookmark-list .modal-header .modal-title {
+	display: inline-block;
+}
+#bookmark-list .modal-header img {
+	position:relative;
+	top: 5px;
+}
+#bookmark-list .modal-body ul li {
+	margin: 10px auto;
+	vertical-align: middle;
+}
+#bookmark-list .modal-body ul li div {
+	display: inline-block;
+}
+#bookmark-list .modal-body input[type="checkbox"] {
+	width: 20px;
+	height: 20px;
+	margin-right: 10px;
+	border-width: thick;
+	position: relative;
+	top: 1.5px;
+}
+#bookmark-list .modal-body label {
+	font-size: 15px;
+	position: relative;
+	top: -1.5px;
+}
 
 
 
