--- a/webapp/assets/css/course-write.css
+++ b/webapp/assets/css/course-write.css
@@ -100,6 +100,7 @@ input[name="address"] {width: 89%;}
 	border-radius: 3px;
 	background-color: rgb(35, 45, 74);
 	color: rgb(255, 255, 255);
+	border-color: transparent;
 }
 /* 흰색 버튼 */
 input[type="radio"]+label, #btn-wrap>button{
