--- a/webapp/WEB-INF/views/map/map.html
+++ b/webapp/WEB-INF/views/map/map.html
@@ -5,6 +5,7 @@
 	<title>지도</title>
 	<link rel="stylesheet" href="../../../assets/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" href="../../../assets/css/map.css">
+	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6f9735f43a150536e030654b347315fc"></script>
 </head>
 <body>
 <div id="wrap">
