--- a/webapp/WEB-INF/views/includes/header.html
+++ b/webapp/WEB-INF/views/includes/header.html
@@ -3,23 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<title>main</title>
-	<link rel="stylesheet" href="../../../assets/css/main.css">
+	<link rel="stylesheet" href="../../../assets/css/includes2.css">
 </head>
 <body>
-	
 	<div id="header">
 		<a href="../main/index.html"><img id="logo" src="../../../assets/image/main/logo.jpg"></a>
-		
-	<div id="login" class="login">
-	<input id="check-btn" type="checkbox">
-	<label for="check-btn">김수빈님</label>
 	
-		<ul id="menuitems" class="menubars">
-			<li class="a"><a href="">코스 등록하기</a></li>
-			<li class="a"><a href="">마이사이트</a></li>
-			<li class="a"><a href="">로그아웃</a></li>
-		</ul>
-	</div>
+		<div id="user-menu">
+			<label for="check-btn">최보승님</label>
+			<input id="check-btn" type="checkbox">
+			<ul id="menuitems" class="menubars">
+					<li class="a"><a href="">코스 등록하기</a></li>
+					<li class="a"><a href="">마이사이트</a></li>
+					<li class="a"><a href="">로그아웃</a></li>
+			</ul>
+		</div>
 	
 		<div id="nav">
 			<ul>
@@ -28,22 +26,20 @@
 				<li><a href="../best/bestPlus.html">베스트</a></li>
 				<li><a href="../map/map.html">지도</a></li>
 			</ul>
-		</div> 
+		</div>
 		<!-- nav -->
 	</div> 
 	<!-- header -->
-	
-	
-	
-		<div id="header">
+	<div id="header">
 		<a href="../main/index.html"><img id="logo" src="../../../assets/image/main/logo.jpg"></a>
-		
-	<div id="logout">
-		<ul>
-			<li><a href="">회원가입</a></li>
-			<li><a href="">로그인</a></li>
-		</ul>
-	</div>
+		<div id="user-menu">
+			<div id="login">
+				<ul>
+					<li><a href="">회원가입</a></li>
+					<li><a href="">로그인</a></li>
+				</ul>
+			</div>
+		</div>
 		<div id="nav">
 			<ul>
 				<li><a href="../together/together.html">함께하기</a></li>
@@ -55,6 +51,5 @@
 		<!-- nav -->
 	</div> 
 	<!-- header -->
-	
 </body>
 </html>
