--- a/webapp/assets/css/includes.css
+++ b/webapp/assets/css/includes.css
@@ -6,6 +6,7 @@
 #wrap>#content {padding: 10px 0px; margin-bottom: 150px;}
 
 /**************************** header ****************************/
+/* ----------- 네비 ----------- */
 #header {
 	max-width: 100%;
 	height: 80px;
@@ -29,13 +30,24 @@
 	margin-left: 40px;
 }
 
-/* 로그인 회원가입 */
-#header #login {
+#header #user-menu { 
+	margin: 20px 0px 20px 40px;
 	float: right;
-	height: 40px;
 	width: 160px;
 	margin: 20px 0px 20px 40px;
+}
+
+/* ----------- 로그인 전 로그인 회원가입 ----------- */
+#header #login {
+	float: right;
+	display: flex;
+	justify-content: center; /* align horizontal */
+	align-items: center; /* align vertical */
+	height: 40px;
+	width: 160px;
 	border: 1px solid rgb(174, 174, 174);
+	font-size: 14px;
+	font-weight: 700;
 }
 
 #header #login ul li {
@@ -45,60 +57,45 @@
 	align-items: center; /* align vertical */
 	width: 79px;
 	height: 40px;
-	font-size: 14px;
-	font-weight: 700;
 }
-
-
-
-
 
 /* ----------- 로그인 후 헤더 변환 ----------- */
 /* 메뉴 펼침 - 체크박스 체크되면 메뉴목록 표시 */
-#check-btn { 
+
+#header #user-menu label { 
+	margin: 0;
+	cursor: pointer;
+	display: flex;
+	justify-content: center; /* align horizontal */
+	align-items: center; /* align vertical */
+	height: 40px;
+	width: 160px;
+	border: 1px solid rgb(174, 174, 174);
+	font-size: 14px;
+	font-weight: 700;
+}
+
+#header #user-menu #check-btn, .menubars { 
 	display: none;
 }
 
-/* 사용자 이름 설정 */
-.login {	
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 14px;
-	font-weight: 700;
-	background-color: rgb(174, 174, 174);
-}
-
-#check-btn label {
-	text-align: center;
-	display: block; 
-}
-
-#check-btn:checked ~ .menubars { 
-	display: block; 
-} 
-
-.menubars { 
-	display: none; 
-	margin-top: 100px;
+#header #user-menu #check-btn:checked ~ .menubars { 
+	display: block;
+	margin-top: 10px;
 }
 
 /* 로그인 후 펼친 메뉴 설정 */
-.menubars li {
-	background-color: #99ccff;
+#header #user-menu .menubars li {
+	display: flex;
+	justify-content: center; /* align horizontal */
+	align-items: center; /* align vertical */
+	background-color: #fff;
 	text-align: center;
-	height: 25px;
-	width: 120px;
+	height: 30px;
+	width: 100%;
 	border: 1px solid rgb(174, 174, 174);
 }
 
-#header #login {
-	float: right;
-	height: 40px;
-	width: 160px;
-	margin: 20px 0px 20px 40px;
-	border: 1px solid rgb(174, 174, 174);
-}
 
 /**************************** footer ****************************/
 
