--- a/webapp/WEB-INF/views/includes/header.html
+++ b/webapp/WEB-INF/views/includes/header.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>main</title>
-	<link rel="stylesheet" href="../../../assets/css/includes2.css">
+	<link rel="stylesheet" href="../../../assets/css/includes.css">
 </head>
 <body>
 	<div id="header">
