--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -4,13 +4,13 @@
 
 /* =======================공통======================= */
 body {font-size: 14px;}
-.bold {font-weight: 700;}
 .pointer {cursor: pointer;}
+.bold {font-weight: 700;}
 /* radio 버튼 초기화 */
 input[type=radio] {display:none;}
 /* =======================레이아웃======================= */
-#wrap {padding: 10px 0px; margin: auto; margin-bottom: 150px; max-width: 1200px;}
-
+#wrap/* >#content */ {top:80px; padding: 50px 0px; margin: auto; margin-bottom: 150px; max-width: 1200px; height:5000px; }
+#header {left:0;/* z-index: 1;  */top:0; position: fixed; width:100%; background-color:white; height:80px;}
 
 
 
@@ -18,9 +18,6 @@ input[type=radio] {display:none;}
 /**************************************************************************/
 /* 마이페이지-메인/나의코스/즐겨찾기 *************************************************************/
 /**************************************************************************/
-.header {background-color: #F1F1F1; text-align: center;   padding: 20px;}
-
-/* .subHeader {height: 90px; border: 1px solid #808080; text-align: center;   padding: 20px;} */
 .subHeader .menuBar-open {width: 30px; height:30px; float: left; margin-left:40px;}
 .subHeader #title {height: 48px; line-height:48px; text-align: center;
 					font-size:36px; font-weight:bold; margin:20px;}
@@ -56,30 +53,36 @@ input[type=radio] {display:none;}
 /**************************************************************************/
 /* 마이페이지-메뉴바 *************************************************************/
 /**************************************************************************/
-.menuBar-display {width:1200px; background-color:none;}
-.menuBar { width:400px; min-height:600px; text-align:left; line-height: 50px; border-right:solid 1px gray;}
-.menuBar #menuList {font-size: 14px; line-height:50px;}
+/* .menuBar-display {width:1200px; background-color:none;} */
+#menuBar { width:400px; height:100%; position: fixed; 
+			z-index: 1; /* Stay on top */
+			top: 80px;  /* Stay at the top */
+			left: 0;
+			text-align:left; line-height: 50px; 
+			background-color:white; border-right:solid 1px gray;}
+#menuBar a:hover {color: #f1f1f1;}
+#menuBar #menuList {font-size: 14px; line-height:50px;}
 
 
-.menuBar .menu1 {width:(100%-padding); height:(20%-padding); border-bottom:solid 1px #000000; text-align:left;  padding:20px 30px; }
-.menuBar .menu1 #mypage {font-size: 18px; font-weight:bold;float:left; }
-.menuBar .menu1 .myHome {width: 20px; height: 20px; }
-.menuBar .menu1 .menuBar-close {text-align:right; }
-.menuBar .menu1 .menuBar-close-btn {width: 20px; height: 20px; }
+#menuBar .menu1 {width:(100%-padding); height:(20%-padding); border-bottom:solid 1px #000000; text-align:left;  padding:20px 30px; }
+#menuBar .menu1 #mypage {font-size: 18px; font-weight:bold;float:left; }
+#menuBar .menu1 .myHome {width: 20px; height: 20px; }
+#menuBar .menu1 .menuBar-close {text-align:right; }
+#menuBar .menu1 .menuBar-close-btn {width: 20px; height: 20px; }
 
 
-.menuBar .menu2 {width:(100%-padding); height:(60%-padding); border-bottom:solid 1px #000000; text-align:left;  padding:20px 30px; overflow:scroll;}
-.menuBar .menu2 #bookmark {font-size: 18px; float:left; font-weight:bold;}
-.menuBar .bmStar {width: 20px; height: 20px;}
-.menuBar .menu2 .bookmark-btn {text-align:right;}
-.menuBar .plus-btn {width: 20px; height: 20px;}
-.menuBar .minus-btn {width: 20px; height: 20px;}
-.menuBar #menuList .editName {width: 16px; height: 16px; float:right; color: gray; margin-top:17px;}
+#menuBar .menu2 {width:(100%-padding); height:(60%-padding); border-bottom:solid 1px #000000; text-align:left;  padding:20px 30px; overflow:scroll;}
+#menuBar .menu2 #bookmark {font-size: 18px; float:left; font-weight:bold;}
+#menuBar .bmStar {width: 20px; height: 20px;}
+#menuBar .menu2 .bookmark-btn {text-align:right;}
+#menuBar .plus-btn {width: 20px; height: 20px;}
+#menuBar .minus-btn {width: 20px; height: 20px;}
+#menuBar #menuList .editName {width: 16px; height: 16px; float:right; color: gray; margin-top:17px;}
 
 
-.menuBar .menu3 {width:(100%-padding); height: (20%-padding); text-align:left;  padding:20px 30px; }
-.menuBar .menu3 #members {font-size: 18px; font-weight:bold; }
-.menuBar #setting {width: 20px; height: 20px; vertical-align:center;}
+#menuBar .menu3 {width:(100%-padding); height: (20%-padding); text-align:left;  padding:20px 30px; }
+#menuBar .menu3 #members {font-size: 18px; font-weight:bold; }
+#menuBar #setting {width: 20px; height: 20px; vertical-align:center;}
 
 
 
