--- a/webapp/WEB-INF/views/main/main.html
+++ b/webapp/WEB-INF/views/main/main.html
@@ -7,17 +7,22 @@
 <title>main test</title>
 </head>
 <body>
+	<h2>현재 날씨</h2>
+	<h3 class="ctemp">현재 온도 : </h3>
+	<h3 class="lowtemp">최저 온도 : </h3>
+	<h3 class="hightemp">최고 온도 : </h3>
+	<h3 class="icon"></h3>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" 
-integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.min.js" 
+integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" 
+crossorigin="anonymous"></script>
 
 <script>
-
-$.getJSON('http://api.openweathermap.org/data/2.5/weather?q=Seoul&appid=﻿api.openweathermap.org/data/2.5/weather?q=Seoul&appid=c0af703bdcbdcbb564c909471fce177c',function(
-		result){
-		alert(result.main.temp);
-	});
-	
+		$.getJSON('http://api.openweathermap.org/data/2.5/weather?q=Seoul&appid=﻿api.openweathermap.org/data/2.5/weather?q=Seoul&appid=c0af703bdcbdcbb564c909471fce177c',function(
+				result){
+			
+				$('.ctemp').append(result.main.temp);
+		});
 	
 </script>
 
