--- a/webapp/WEB-INF/views/main/main.html
+++ b/webapp/WEB-INF/views/main/main.html
@@ -15,7 +15,7 @@
 
 
 <script>
-	$.getJSON('http://api.openweathermap.org/data/2.5/weather?q=Seoul&appid=﻿api.openweathermap.org/data/2.5/weather?q=Seoul&appid=c0af703bdcbdcbb564c909471fce177c',
+	$.getJSON('http://api.openweathermap.org/data/2.5/weather?q=Seoul&appid=ddeb92652c34f9e77a6961c434afa555',
 		function(result){
 		
 			$('.ctemp').append(result.main.temp);
