--- a/webapp/assets/css/course-write.css
+++ b/webapp/assets/css/course-write.css
@@ -96,7 +96,7 @@ input[name="address"] {width: 89%;}
 
 /* ---------------------버튼설정-------------------- */
 /* 검은색 버튼 */
-.course-form #address-btn, .course-form #course-pic div label {
+.course-form #address-btn, .course-form #drop label {
 	border-radius: 3px;
 	background-color: rgb(35, 45, 74);
 	color: rgb(255, 255, 255);
@@ -182,7 +182,19 @@ input[type="radio"]+label img {
 
 /* -------------------사진등록----------------------- */
 /* 사진추가 드래그앤 드롭 */
+/* 파일선택 버튼 가리기 */
 
+.course-form #drop input[type="file"] {display: none;}
+.course-form #drop label {
+	width: 123px;
+	line-height: 40px;
+	float:left;
+	position: relative;
+	top: 10px;
+	left: 10px;
+	font-size: 15px;
+	text-align: center;
+}
 .course-form #drop {
     width: 100%;
 	height: 350px;
@@ -191,53 +203,45 @@ input[type="radio"]+label img {
 	overflow: auto;
 	margin-bottom: 50px;
 }
-#thumbnails {margin: 15px;}
-#thumbnails #course-pic {
-	margin:auto;
-	width: 100%;
-	height: 100%;
+.course-form #drop #file-btn {
+	width: 221px;
+}
+/* 사진 없을때 */
+.course-form #drop #fileDragDesc {
+	width:100%;
+	height: auto;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	
 }
-#thumbnails #course-pic #pic-main {
-	padding: 60px 0px;
-	width: 250px;
-	height: 250px;
-	text-align: center;
+.course-form #drop #fileDragDesc #photo-icon {
+	display: block;
+	width: 64px;
+	height: 64px;
+	
 }
-#thumbnails #course-pic #pic-main p {
-	margin: 20px 0px 0px 0px;
+.course-form #drop #fileDragDesc p {
+	display: block;
+	margin: 15px 0px 30px 0px;
 }
-/* 추가된 사진 */
-#drop .pic-content {
+/* 사진 있을때 */
+#filesList .thumb {
 	display: inline-block;
-	width: 210px;
-	height: 145px;
-	margin-bottom: 20px;
-	margin-right: 10px;
+	width: auto;
+	height: auto;
+	margin: 10px;
 }
-#drop .pic-content > img {
-	width: 180px;
-	height: 140px;
-	object-fit: cover;
-	border: 3px solid rgb(255,255,255);
-}
-#drop .pic-content .close {
-	width: 25px;
-	height: 25px;
-	border-radius: 50%;
-	border: 3px solid rgb(255,255,255);
-	float: right;
+#filesList .thumb span {
 	background-color: rgb(255,255,255);
-	opacity: .5;
+	border-radius: 50px;
 }
-#drop .pic-content .close .glyphicon {
-	position: relative;
-	top: 0px;
-	color: black;
+#filesList .thumb img {
+	width: 190px;
+	height: 150px;
+	object-fit: cover;
 }
-.red {color: rgb(239, 67, 81)};
+
 
 
 /* 사진 없을때
@@ -260,12 +264,6 @@ input[type="radio"]+label img {
 .course-form #course-pic div p {
 	display: block;
 	margin: 15px 0px 30px 0px;
-}
-파일선택 버튼 가리기
-input[type="file"] {display: none;}
-.course-form #course-pic div label {
-	width: 123px;
-	line-height: 40px;
 }
 
 사진 추가 했을때
