--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -9,8 +9,9 @@ body {font-size: 14px;}
 /* radio 버튼 초기화 */
 input[type=radio] {display:none;}
 /* =======================레이아웃======================= */
-#wrap/* >#content */ {top:80px; padding: 50px 0px; margin: auto; margin-bottom: 150px; max-width: 1200px; height:5000px; }
-#header {left:0; z-index: 1;  top:0; position: fixed; width:100%; background-color:white; height:80px;}
+#header {left:0; z-index: 1;  top:0; position: fixed; width:100%; background-color:white;}
+#wrap>#content {position: relative; top:80px; padding:50px 0px; margin:auto; margin-bottom:150px; max-width:1200px; height:900px;}
+
 
 
 
