--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -112,6 +112,7 @@ input[type=radio] {display:none;}
 .myReport #reportList .listTitle .todayReport {font-size:18px; float:right; width:190px;border:rgb(101,101,101) 1px solid;}
 
 
+.myReport #reportList .reportBox {overflow:scroll; width:380px; height:600px;}
 .myReport #reportList .reportContent {width:380px; height:120px; border:solid 0.5px rgb(101,101,101); border-top:none; margin:0px; padding:10px 0px 0px 10px;}
 .myReport #reportList .contentImg {width:100px; height:100px; border:solid 1px #000000; float:left; margin-right:20px; }
 .myReport #reportList .contentTitle {font-size:16px; width:360px; font-weight:bold;line-height:28px; }
