--- a/webapp/assets/css/course-write.css
+++ b/webapp/assets/css/course-write.css
@@ -96,7 +96,7 @@ input[name="address"] {width: 89%;}
 
 /* ---------------------버튼설정-------------------- */
 /* 검은색 버튼 */
-.course-form #address-btn, .course-form #drop label {
+.course-form #address-btn, .course-form h2 label {
 	border-radius: 3px;
 	background-color: rgb(35, 45, 74);
 	color: rgb(255, 255, 255);
@@ -183,15 +183,11 @@ input[type="radio"]+label img {
 /* -------------------사진등록----------------------- */
 /* 사진추가 드래그앤 드롭 */
 /* 파일선택 버튼 가리기 */
-
-.course-form #drop input[type="file"] {display: none;}
-.course-form #drop label {
+.course-form h2 input[type="file"] {display: none;}
+.course-form h2 label {
 	width: 123px;
 	line-height: 40px;
-	float:left;
-	position: relative;
-	top: 10px;
-	left: 10px;
+	margin-right: 20px;
 	font-size: 15px;
 	text-align: center;
 }
@@ -203,22 +199,15 @@ input[type="radio"]+label img {
 	overflow: auto;
 	margin-bottom: 50px;
 }
-.course-form #drop #file-btn {
-	width: 221px;
-}
 /* 사진 없을때 */
 .course-form #drop #fileDragDesc {
-	width:100%;
-	height: auto;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	
+	margin: 80px 0px
 }
 .course-form #drop #fileDragDesc #photo-icon {
 	display: block;
-	width: 64px;
-	height: 64px;
 	
 }
 .course-form #drop #fileDragDesc p {
@@ -241,80 +230,3 @@ input[type="radio"]+label img {
 	height: 150px;
 	object-fit: cover;
 }
-
-
-
-/* 사진 없을때
-.course-form #course-pic {
-	width: 100%;
-	height: 350px;
-	background-color: rgb(224, 224, 224);
-	text-align: center;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin-bottom: 50px;
-}
-.course-form #course-pic div #photo-icon {
-	display: block;
-	margin: auto;
-	width: 64px;
-	height: 64px;
-}
-.course-form #course-pic div p {
-	display: block;
-	margin: 15px 0px 30px 0px;
-}
-
-사진 추가 했을때
-.course-form #course-pic-add {
-	width: 100%;
-	height: 350px;
-	background-color: rgb(224, 224, 224);
-	padding: 10px;
-	overflow: auto;
-}
-스크롤바 없애기
-#course-pic-add::-webkit-scrollbar {
-	-ms-overflow-style: none; IE and Edge
-	scrollbar-width: none; Firefox
-	display: none; Chrome, Safari, Opera
-}
-#course-pic-add .pic-list .pic-content {
-	width: 233px;
-	height: 145px;
-	float: left;
-	margin-bottom: 20px;
-	margin-right: 10px;
-}
-#course-pic-add .pic-content button {
-	width: 29px;
-	height: 29px;
-	border-radius: 50%;
-	border: 3px solid rgb(255,255,255);
-	float: right;
-
-}
-#course-pic-add .pic-content button img {
-	transform: translate(-27%, -5%);
-}
-#course-pic-add .pic-list .pic-content .add-img {
-	width: 204px;
-	height: 145px;
-	object-fit: cover;
-	border: 3px solid rgb(255,255,255);
-}
-사진추가 버튼
-#course-pic-add .pic-list .pic-update {
-	width: 204px;
-	line-height: 145px;
-	float: left;
-	border: 3px solid rgb(255,255,255);
-	background-color: rgb(216, 216, 216);
-	color: rgb(34,34,34);
-	text-align: center;
-} */
-
-
-
-
