--- a/webapp/assets/css/main.css
+++ b/webapp/assets/css/main.css
@@ -24,14 +24,12 @@
 .weather {
 	background-color: #B0C4DE;
 	border: 1px solid rgb(117, 117, 117); 
-	height: 40px; 
+	height: 40px;
+	overflow: hidden;
+	min-width: 1200px;
 }
 
-.weather button {
-	border: 2px solid #666699;
-	border-radius: 2px;
-}
-
+/* 날씨 아이콘 */
 .weather .icon {
 	margin: auto;
 	position: relative;
