--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -100,18 +100,16 @@ input[type=radio] {display:none;}
 			width:1200px; height:700px; padding:0px 30px;}
 
 .myReport #calendar {float:left; width:750px; line-height: 50px;}
-.myReport #calendar #dateForm {width:750px; height:50px; }
+/* .myReport #calendar #dateForm {width:750px; height:50px; }
 .myReport #calendar #calDate {font-size: 28px; font-weight:bold; float:left; text-align:left;}
 .myReport #calendar #dateSearch {font-size: 20px; float:right;}
-.myReport #calendar #calAPI {text-align:center; line-height:600px; width:750px; height:600px; border:solid 1px #73AD21; }
+.myReport #calendar #calAPI {text-align:center; line-height:600px; width:750px; height:600px; border:solid 1px #73AD21; } */
 
 
 .myReport #reportList {width:380px; text-align:left; float:right;}
 .myReport #reportList .listTitle {width:380px; height:50px; text-align:center; line-height:50px; margin:0px}
 .myReport #reportList .listTitle .monthReport {background-color:rgb(50, 108, 249); color:white; font-size:18px; float:left; width:190px; border:rgb(50, 108, 249) 1px solid;}
 .myReport #reportList .listTitle .todayReport {font-size:18px; float:right; width:190px;border:rgb(101,101,101) 1px solid;}
-.myReport #reportList .listTitle .monthReport2 {font-size:18px; float:right; width:190px;border:rgb(101,101,101) 1px solid;}
-.myReport #reportList .listTitle .todayReport2 {background-color:rgb(50, 108, 249); color:white; font-size:18px; float:left; width:190px; border:rgb(50, 108, 249) 1px solid;}
 
 
 .myReport #reportList .reportBox {overflow:scroll; width:380px; height:600px;}
@@ -121,15 +119,10 @@ input[type=radio] {display:none;}
 .myReport #reportList .modify-del-icons {margin:10px 20px 0px 0px;}
 .myReport #reportList .content {font-size:14px; line-height:20px; }
 .myReport #reportList .contentDate {font-size:12px; color:gray; line-height:20px;}
-/* .myReport #reportList .contentModify {font-size:12px; display:inline-block; margin-top:5px;} */
-/* .myReport #reportList .contentModify .myreport-modify-btn {background-color:rgb(50, 108, 249); color:white;
-									margin-right:3px; border-style: none; border-color: none;}
-.myReport #reportList .contentModify .myreport-del-btn {background-color:red; color:white;
-									border-style: none; border-color: none; } */
 
 
-
-
+.fc-direction-ltr .fc-daygrid-event {padding:1px; margin: 1px; background-color:rgba(255, 52, 120, 0.5); border:none;}
+.fc-event-title-container {padding:1px; margin: 1px; color:white; background-color:rgba(255, 52, 120, 0.5); line-height:14px; }
 
 
 
