--- a/webapp/assets/css/map.css
+++ b/webapp/assets/css/map.css
@@ -76,6 +76,24 @@
 	margin-right: 8px;
 	border: 1px solid rgb(174, 174, 174);
 	padding: 0px 10px;
+	cursor: pointer;
+	align-items: center;
+	background-color: transparent;
+	font-weight: 700;
+	font-size: 13px;
+}
+
+#sub-header #filter-menu .fmenu:hover {
+	background-color: rgb(174, 174, 174);
+}
+
+#sub-header #filter-menu .fmenu-selected {
+	display: flex;
+	height: 34px;
+	margin-right: 8px;
+	border: 1px solid rgb(50, 108, 249);
+	padding: 0px 10px;
+	cursor: pointer;
 	align-items: center;
 	background-color: transparent;
 	font-weight: 700;
