--- a/webapp/WEB-INF/views/main/index.html
+++ b/webapp/WEB-INF/views/main/index.html
@@ -32,6 +32,20 @@
 		<!-- nav -->
 	</div>
 	<!-- header -->
+	
+<!------------------------- 날씨 api ------------------------>
+	<div class="weather">
+		<ul>
+			<li class="city"></li>
+			<li class="time">현재 시간 : </li>
+			<li class="ctemp">온도 : </li>
+			<li class="hightemp">최고 온도 : </li>
+			<li class="lowtemp">최저 온도 : </li>
+			<li class="humidity">습도 : </li>
+			<li class="wind">풍속 : </li>
+			<li class="icon"></li>
+		</ul>
+	</div>
 
 <!------------------------- photo slider ------------------------>
 	<div class="slide slide_wrap">
