--- a/webapp/WEB-INF/views/main/index.html
+++ b/webapp/WEB-INF/views/main/index.html
@@ -64,6 +64,7 @@
 	</div>
 
 		<!------------------------- 글귀 ------------------------>
+		
 <div id="wrap">
 		<div class="main-text">
 			<p>살아 숨쉬는 자연에서 <br><br><br> 운동을 시작하다.
@@ -101,5 +102,6 @@
 	</div>
 
 <script src="../../../assets/js/main/main.js"></script>
+<script src="../../../assets/js/main/weather.js"></script>
 </body>
 </html>
