--- a/webapp/WEB-INF/views/board/NewFile.html
+++ b/webapp/WEB-INF/views/board/NewFile.html
@@ -1,24 +1,20 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
-
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
 <title>게시판 글쓰기폼</title>
 <!-- css -->
-<link href="${pageContext.request.contextPath}/assets/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
-<link href="${pageContext.request.contextPath}/assets/css/writeForm.css" rel="stylesheet" type="text/css">
+<link href="../../../assets/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
+<link href="../../../assets/css/writeForm.css" rel="stylesheet" type="text/css">
 
 <!-- 자바스크립트 -->
-<script type="text/javascript" src="${pageContext.request.contextPath}/assets/js/jquery/jquery-1.12.4.js"></script>
-<script type="text/javascript" src="${pageContext.request.contextPath}/assets/bootstrap/js/bootstrap.js"></script>
-<script type="text/javascript" src="${pageContext.request.contextPath}/assets/js/course/view-course.js"></script>
+<script type="text/javascript" src="../../../assets/js/jquery/jquery-1.12.4.js"></script>
+<script type="text/javascript" src="../../../assets/bootstrap/js/bootstrap.js"></script>
+<script type="text/javascript" src="../../../assets/js/course/view-course.js"></script>
 </head>
 <body>
 
 	<div id="wrap">
-		<c:import url="/WEB-INF/views/includes/header.jsp"></c:import>
 		<!-- header -->
 	
 		<h1>게시판</h1>
@@ -81,9 +77,6 @@
 	</div>
 
 	<br><br><br><br><br><br><br>
-
-	<c:import url="/WEB-INF/views/includes/footer.jsp"></c:import>
-	<!-- footer -->
 	
 	
 	<!-- ////////////////////////////////////////////////////////////////// -->
@@ -109,7 +102,7 @@
 			  </ul>
 			</div>
 			
-			<div class="togetherCate">
+			<div class="courseChoose">
 			  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
 			    코스
 			    <span class="caret"></span>
@@ -124,8 +117,8 @@
 
 	      </div>
 	      <div class="modal-footer">
-	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-	        <button type="button" class="btn btn-primary">Save</button>
+	        <button type="button" class="btn btn-default" id="close" data-dismiss="modal">Close</button>
+	        <button type="button" class="btn btn-primary" id="save">Save</button>
 	      </div>
 	    </div><!-- /.modal-content -->
 	  </div><!-- /.modal-dialog -->
