--- a/webapp/assets/css/read.css
+++ b/webapp/assets/css/read.css
@@ -165,7 +165,7 @@ tr>#date, #up {
 #modify_s {
 	width : 60px;
 	height: 30px;
-	background-color: #dedede;
+	background-color: #fff;
 	color: #666;
 	font-size : 10pt;
 	border:none;
@@ -174,8 +174,8 @@ tr>#date, #up {
 	margin-left: 1px;
 	width : 60px;
 	height: 30px;
-	background-color: #000;
-	color: #fff;
+	background-color: #fff;
+	color: #666;
 	font-size : 10pt;
 	border:none;
 }
@@ -184,7 +184,7 @@ tr>#date, #up {
 #modify_xs {
 	width : 50px;
 	height: 25px;
-	background-color: #dedede;
+	background-color: #fff;
 	color: #666;
 	font-size : 9pt;
 	border:none;
@@ -193,8 +193,8 @@ tr>#date, #up {
 	margin-left: 0.5px;
 	width : 50px;
 	height: 25px;
-	background-color: #000;
-	color: #fff;
+	background-color: #fff;
+	color: #666;
 	font-size : 9pt;
 	border:none;
 }
