--- a/webapp/WEB-INF/views/board/NewFile.html
+++ b/webapp/WEB-INF/views/board/NewFile.html
@@ -134,11 +134,36 @@
 	        <h4 class="modal-title">함께하기 등록하기</h4>
 	      </div>
 	      <div class="modal-body">
-	        <p>One fine body&hellip;</p>
+	        
+	        <div class="togetherCate">
+			  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+			    카테고리
+			    <span class="caret"></span>
+			  </button>
+			  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+			    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">함께</a></li>
+			    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">태그</a></li>
+			    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">참여</a></li>
+			  </ul>
+			</div>
+			
+			<div class="togetherChoose">
+			  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+			    함께하기
+			    <span class="caret"></span>
+			  </button>
+			  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+			    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
+			    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
+			    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
+			    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li>
+			  </ul>
+			</div>
+
 	      </div>
 	      <div class="modal-footer">
-	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-	        <button type="button" class="btn btn-primary">Save</button>
+	        <button type="button" class="btn btn-default" id="close" data-dismiss="modal">Close</button>
+	        <button type="button" class="btn btn-primary" id="save">Save</button>
 	      </div>
 	    </div><!-- /.modal-content -->
 	  </div><!-- /.modal-dialog -->
