--- a/webapp/assets/css/writeForm.css
+++ b/webapp/assets/css/writeForm.css
@@ -52,7 +52,7 @@ h1 {
 /** 버튼 **/
 #course_choice, #together_choice {
 	margin-left: 30px;
-	border:none;
+	border: none;
 	background-color: #fff;
 	color: #ccc;
 }
@@ -76,20 +76,31 @@ h1 {
 
 
 /********************** 모달 **********************/
-.modal-content {
-	width: 430px;
+
+#courseModal {margin: auto;}
+.modal-dialog{
+	display: flex;
+	justify-content: center;
 }
-.courseCate {
-	margin: 20px 0px;
-	height: 35px;
+.modal-title {
+	margin-left: 15px;
+	font-size : 13pt;
+}
+.modal-content {
+	width: 380px;
+}
+.courseCate, .togetherCate {
+	margin-top: 35px;
+	margin-left: 55px;
+	height: 50px;
 	overflow: visible;
+	font-size : 12pt;
 }
 .dropdown-toggle {
 	width: 230px;
-	height: 35px;
+	height: 40px;
 	text-align: left;
 }
-
 .dropdown-menu {
 	position: relative;
 	top: 0;
@@ -97,23 +108,34 @@ h1 {
 	float: none;
 	width: 230px;
 }
-
 .caret {
 	float: right;
 	margin-top: 10px;
 }
-.courseChoose {
-	height: 35px;
-	margin: 20px 0px;
+.courseChoose, .togetherChoose {
+	height: 50px;
+	margin-top: 45px;
+	margin-bottom: 35px;
+	margin-left: 55px;
+	font-size : 12pt;
 }
-
 #close {
-	margin-bottom: 10px;
+	margin-bottom: 3px;
+	margin-left: 38px;
 	float: left;
+	border: none;
+	background-color: #fff;
+	color: #c0c0c0;
+	font-size : 13pt;
 }
 #save {
-	margin-bottom: 10px;
+	margin-bottom: 3px;
+	margin-right: 38px;
 	float: right;
+	border: none;
+	background-color: #fff;
+	color: rgb(50, 108, 249);
+	font-size : 13pt;
 }
 
 
