--- a/webapp/assets/css/course-write.css
+++ b/webapp/assets/css/course-write.css
@@ -92,6 +92,7 @@ input[type=radio] {display:none;}
 .txt-long {width: 100%;}
 .txt-short {width: 110px; margin: 0px 12px 0px 0px;}
 input[name="address"] {width: 89%;}
+input[type="datetime-local"] {border:  1px solid rgb(223, 223, 223);}
 
 
 /* ---------------------버튼설정-------------------- */
