페이징 가운데 정렬

--- a/webapp/assets/css/board.css
+++ b/webapp/assets/css/board.css
@@ -30,7 +30,8 @@ h1 {
 }
 #page {
 	margin-top: 20px;
-	margin-left: 39%;
+	display: grid;
+	place-items: center;
 }
 
 /*********************** 검색 ***********************/
